--- a/meross/smartplug-control.html
+++ b/meross/smartplug-control.html
@@ -4,7 +4,7 @@
 		defaults: {	
 			confignode: { value: '', type: 'meross-config' },
 			name: { value: '' },
-			ip: { value: '', type: 'text', required: true }
+			ip: { value: '', type: 'text' }
 		},
 		inputs: 1,				// set the number of inputs - only 0 or 1
 		outputs: 1,			 // set the number of outputs - 0 to n
