--- a/meross/smartgarage-control.html
+++ b/meross/smartgarage-control.html
@@ -4,7 +4,7 @@
 		defaults: {	
 			confignode: { value: '', type: 'meross-config' },
 			name: { value: '' },
-			ip: { value: '', type: 'text', required: true },
+			ip: { value: '', type: 'text', required: false},
 			channel: { value: '0', type: 'text', required: false, validate: RED.validators.number() }
 		},
 		inputs: 1,				// set the number of inputs - only 0 or 1
